--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "Jose Dino Abaya",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^6.5.0",
     "bcryptjs": "^3.0.2",
     "crypto": "^1.0.1",
     "dotenv": "^16.4.7",
