--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,11 @@
     "@tiptap/starter-kit": "^2.11.7",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
+    "chart.js": "^4.4.9",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.4.1"
