--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
