--- a/backend/package.json
+++ b/backend/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^7.2.1",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.2",
+    "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
