--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "cloudinary": "^2.6.0",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "csv-writer": "^1.6.0",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^16.4.7",
@@ -36,6 +37,7 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
+    "pdfkit": "^0.14.0",
     "pg": "^8.14.1"
   },
   "devDependencies": {
