--- a/backend/package.json
+++ b/backend/package.json
@@ -28,9 +28,11 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-async-handler": "^1.2.0",
+    "express-rate-limit": "^7.5.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
     "md5": "^2.3.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
     "node-cron": "^3.0.3",
     "nodemon": "^3.1.9",
