--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "bootstrap": "^5.3.5",
     "chart.js": "^4.4.9",
+    "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.9",
